--- a/help.html
+++ b/help.html
@@ -81,9 +81,6 @@
 			<a class="menu-item" href="/home/"><span class="menu-item-text">Home</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="/contact/"><span class="menu-item-text">Contact</span></a>
-			
-		</li><li>
 			<a class="menu-item" href="request.html"><span class="menu-item-text">Help</span></a>
 			
 		</li>
@@ -308,7 +305,7 @@
 	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 cf"><p class="wnd-align-center">Our Goal is to improve our data analysis. By contributing to the data set we can improve our AI systems to be more precise and accurate. This allows our team to respond to a variety of future disasters faster and more prepared. To contribute simply press Support us and fill in the form.<br></p></div>
 </div><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-3 wnd-align-center">
 	<div class="b-btn-c">
-		<a class="b-btn-l" href="/copy-of-dashboard/">
+		<a class="b-btn-l" href="#">
 			<span class="b-btn-t">Support us</span>
 		</a>
 	</div>
