--- a/received.html
+++ b/received.html
@@ -269,7 +269,7 @@
                           </div>
                         </div>
                       </li>`;  
-            $("#listofthings")[0].innerHTML += thing;
+            $("#listofthings")[0].innerHTML = thing + $("#listofthings")[0].innerHTML
         }
     });
 </script>
