--- a/received.html
+++ b/received.html
@@ -63,7 +63,7 @@
               <div class="menu_section active">
                 <h3>General</h3>
                 <ul class="nav side-menu" style="">
-                  <li class=""><a><i class="fa fa-home"></i> Dashboard <span class="fa fa-chevron-down"></span></a>
+                  <li class=""><a href="index.html"><i class="fa fa-home"></i> Dashboard <span class="fa fa-chevron-down"></span></a>
                     
                   </li>
                   <li>
